argo-hello-demo/hello-app2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app2
  labels:
    app: hello-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app2
  template:
    metadata:
      labels:
        app: hello-app2
    spec:
      containers:
      - name: hello-app2
        image: nginxdemos/hello
        ports:
        - containerPort: 80
