argo-hello-demo/hello-app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app2-service
  labels:
    app: hello-app2
spec:
  selector:
    app: hello-app2
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
